@@ -2,7 +2,7 @@
 
 <beans>
 	<bean id="nomenclatureManager" class="edu.mcw.rgd.nomenclatureinterface.NomenclatureManager">
-		<property name="version" value="Nomenclature Manager   -- build Jan 31, 2022" />
+		<property name="version" value="Nomenclature Manager   -- build Sep 14, 2022" />
 		<property name="informaticPrescreener" ref="informaticPrescreener"/>
 	</bean>
 	
