@@ -1,3 +1,6 @@
+Sep 14, 2022
+  renamed distro to 'nomenclature-pipeline'
+
 Jun 13, 2022
   fixed logging of date stamps
 
